--- a/index.html
+++ b/index.html
@@ -1,1 +1,186 @@
-
+<!DOCTYPE html>
+<html class="light" lang="tr"><head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>FootyBook - Saha Rezervasyonu</title>
+<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+<script>
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#17cf17",
+                        "background-light": "#f6f8f6",
+                        "background-dark": "#112111",
+                    },
+                    fontFamily: {
+                        "display": ["Space Grotesk", "Noto Sans", "sans-serif"]
+                    },
+                    borderRadius: {
+                        "DEFAULT": "0.25rem",
+                        "lg": "0.5rem",
+                        "xl": "0.75rem",
+                        "full": "9999px"
+                    },
+                },
+            },
+        }
+    </script>
+<style>
+      .material-symbols-outlined {
+        font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24
+      }
+    </style>
+        <!-- Ortak stil dosyası -->
+        <link rel="stylesheet" href="../common.css">
+</head>
+<body class="bg-background-light dark:bg-background-dark font-display text-[#0e1b0e] dark:text-gray-200">
+        <!-- Ortak navbar -->
+        <div id="navbar-container"></div>
+        <script>
+            fetch('../navbar.html')
+                .then(res => res.text())
+                .then(html => { document.getElementById('navbar-container').innerHTML = html; });
+        </script>
+<div class="relative flex h-auto min-h-screen w-full flex-col group/design-root overflow-x-hidden">
+<div class="layout-container flex h-full grow flex-col">
+<header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#e7f3e7] dark:border-b-gray-800 px-10 py-3">
+<div class="flex items-center gap-4 text-[#0e1b0e] dark:text-gray-200">
+<div class="size-6 text-primary">
+<svg fill="currentColor" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+<path d="M24 45.8096C19.6865 45.8096 15.4698 44.5305 11.8832 42.134C8.29667 39.7376 5.50128 36.3314 3.85056 32.3462C2.19985 28.361 1.76794 23.9758 2.60947 19.7452C3.451 15.5145 5.52816 11.6284 8.57829 8.5783C11.6284 5.52817 15.5145 3.45101 19.7452 2.60948C23.9758 1.76795 28.361 2.19986 32.3462 3.85057C36.3314 5.50129 39.7376 8.29668 42.134 11.8833C44.5305 15.4698 45.8096 19.6865 45.8096 24L24 24L24 45.8096Z"></path>
+</svg>
+</div>
+<h2 class="text-[#0e1b0e] dark:text-gray-200 text-lg font-bold leading-tight tracking-[-0.015em]">FootyBook</h2>
+</div>
+<div class="flex flex-1 justify-end gap-8">
+<div class="flex items-center gap-9">
+<a class="text-[#0e1b0e] dark:text-gray-200 text-sm font-medium leading-normal" href="#">Anasayfa</a>
+<a class="text-[#0e1b0e] dark:text-gray-200 text-sm font-medium leading-normal" href="#">Rezervasyonlarım</a>
+<a class="text-[#0e1b0e] dark:text-gray-200 text-sm font-medium leading-normal" href="#">Sahalar</a>
+</div>
+<div class="flex items-center gap-4">
+<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-primary text-[#0e1b0e] text-sm font-bold leading-normal tracking-[0.015em]">
+<span class="truncate">Giriş Yap</span>
+</button>
+<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-primary/20 dark:bg-primary/30 text-[#0e1b0e] dark:text-gray-200 text-sm font-bold leading-normal tracking-[0.015em]">
+<span class="truncate">Kayıt Ol</span>
+</button>
+</div>
+</div>
+</header>
+<main class="flex-1 px-4 sm:px-6 lg:px-8 py-8">
+<div class="grid grid-cols-1 lg:grid-cols-3 gap-8 max-w-7xl mx-auto">
+<div class="lg:col-span-1">
+<div class="flex flex-col gap-6">
+<div class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl shadow-lg" data-alt="Powerleague Stadium football pitch at sunset" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBo-U5rrk2abe2PQZWrKBpzSziC2xSVQ4o8y8W3y8l5pO4kMzeGqDNJooyTS9ZZK73Sqqes_qkfzgkR2kvs6krybKCM5hs4-gfs38LGP7RIQ9rlW4ySq2oqn0U0XzOtwqWULfGaWtXPGlOUhVsMwvAfW2qlNyFfOTxSHmVVfYU7bD-NdbsDDsyI24Zlu8sws2jIXBrKB1dqH0p7oEUqqYWPaMc-RwRm0hS3olUwqvi3MYDNcm9qmealqF0FIEMXxyPT7fCz9xWbJXUG");'></div>
+<div>
+<h1 class="text-[#0e1b0e] dark:text-gray-100 text-3xl font-bold leading-tight tracking-tight">Powerleague Stadyumu</h1>
+<p class="text-primary text-base font-normal leading-normal mt-1 flex items-center gap-1.5">
+<span class="material-symbols-outlined text-lg">location_on</span>
+                                    123 Futbol Yolu, Londra, Birleşik Krallık
+                                </p>
+<div class="mt-4 flex flex-col gap-2">
+<p class="text-[#0e1b0e] dark:text-gray-300 text-base font-normal leading-normal flex items-center gap-2"><span class="material-symbols-outlined text-primary text-lg">sports_soccer</span> 5'e 5 saha</p>
+<p class="text-[#0e1b0e] dark:text-gray-300 text-base font-normal leading-normal flex items-center gap-2"><span class="material-symbols-outlined text-primary text-lg">lightbulb</span> Projektörler</p>
+<p class="text-[#0e1b0e] dark:text-gray-300 text-base font-normal leading-normal flex items-center gap-2"><span class="material-symbols-outlined text-primary text-lg">checkroom</span> Soyunma odaları</p>
+</div>
+<p class="text-[#0e1b0e] dark:text-gray-300 text-base font-semibold leading-normal mt-4">Saatlik £50'dan başlayan fiyatlarla</p>
+</div>
+</div>
+</div>
+<div class="lg:col-span-2">
+<div class="bg-background-light dark:bg-background-dark p-6 rounded-xl shadow-lg border border-[#e7f3e7] dark:border-gray-800">
+<div class="flex items-center justify-between mb-6">
+<button class="p-2 rounded-full hover:bg-primary/20 dark:hover:bg-primary/30">
+<span class="material-symbols-outlined">chevron_left</span>
+</button>
+<h2 class="text-[#0e1b0e] dark:text-gray-100 text-xl font-bold leading-tight tracking-tight">20 - 26 Mayıs</h2>
+<button class="p-2 rounded-full hover:bg-primary/20 dark:hover:bg-primary/30">
+<span class="material-symbols-outlined">chevron_right</span>
+</button>
+</div>
+<div class="grid grid-cols-7 gap-1 sm:gap-2 text-center text-sm font-medium text-[#0e1b0e] dark:text-gray-300">
+<div class="pb-2">Pzt</div>
+<div class="pb-2">Sal</div>
+<div class="pb-2">Çar</div>
+<div class="pb-2">Per</div>
+<div class="pb-2">Cum</div>
+<div class="pb-2">Cmt</div>
+<div class="pb-2">Paz</div>
+</div>
+<div class="grid grid-cols-7 gap-1 sm:gap-2">
+<div class="flex flex-col items-center space-y-1 sm:space-y-2">
+<div class="py-2.5 text-xs text-gray-500 dark:text-gray-400 h-10 sm:h-11 flex items-center">17:00</div>
+<div class="py-2.5 text-xs text-gray-500 dark:text-gray-400 h-10 sm:h-11 flex items-center">18:00</div>
+<div class="py-2.5 text-xs text-gray-500 dark:text-gray-400 h-10 sm:h-11 flex items-center">19:00</div>
+<div class="py-2.5 text-xs text-gray-500 dark:text-gray-400 h-10 sm:h-11 flex items-center">20:00</div>
+<div class="py-2.5 text-xs text-gray-500 dark:text-gray-400 h-10 sm:h-11 flex items-center">21:00</div>
+</div>
+<div class="col-span-6 grid grid-cols-6 gap-1 sm:gap-2">
+<div class="space-y-1 sm:space-y-2">
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-not-allowed bg-gray-200 dark:bg-gray-700 h-10 sm:h-11 rounded-md"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-not-allowed bg-gray-200 dark:bg-gray-700 h-10 sm:h-11 rounded-md"></div>
+</div>
+<div class="space-y-1 sm:space-y-2">
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="bg-primary ring-2 ring-primary text-[#0e1b0e] h-10 sm:h-11 rounded-md font-bold"></div>
+<div class="cursor-not-allowed bg-gray-200 dark:bg-gray-700 h-10 sm:h-11 rounded-md"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+</div>
+<div class="space-y-1 sm:space-y-2">
+<div class="cursor-not-allowed bg-gray-200 dark:bg-gray-700 h-10 sm:h-11 rounded-md"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-not-allowed bg-gray-200 dark:bg-gray-700 h-10 sm:h-11 rounded-md"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+</div>
+<div class="space-y-1 sm:space-y-2">
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-not-allowed bg-gray-200 dark:bg-gray-700 h-10 sm:h-11 rounded-md"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-not-allowed bg-gray-200 dark:bg-gray-700 h-10 sm:h-11 rounded-md"></div>
+</div>
+<div class="space-y-1 sm:space-y-2">
+<div class="cursor-not-allowed bg-gray-200 dark:bg-gray-700 h-10 sm:h-11 rounded-md"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-not-allowed bg-gray-200 dark:bg-gray-700 h-10 sm:h-11 rounded-md"></div>
+<div class="cursor-not-allowed bg-gray-200 dark:bg-gray-700 h-10 sm:h-11 rounded-md"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+</div>
+<div class="space-y-1 sm:space-y-2">
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+<div class="cursor-pointer bg-primary/20 dark:bg-primary/30 hover:bg-primary/40 dark:hover:bg-primary/50 h-10 sm:h-11 rounded-md transition-colors"></div>
+</div>
+</div>
+</div>
+<div class="mt-6 flex justify-between items-center bg-primary/10 dark:bg-primary/20 p-4 rounded-lg">
+<div>
+<p class="text-[#0e1b0e] dark:text-gray-200 text-base font-normal leading-normal">Salı, 18:00 için <span class="font-bold">£60</span>'e seçim yaptınız.</p>
+</div>
+<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-6 bg-primary text-[#0e1b0e] text-base font-bold leading-normal tracking-[0.015em]">
+<span class="truncate">Şimdi Rezerve Et</span>
+</button>
+</div>
+</div>
+</div>
+</div>
+</main>
+</div>
+</div>
+</body></html>
