--- a/index.html
+++ b/index.html
@@ -1,151 +1,128 @@
 <!DOCTYPE html>
-<html class="light" lang="tr"><head>
+<html lang="tr">
+<head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>FieldBook - Giriş Yap</title>
+<title>Hesap Oluştur - FieldBookr</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&amp;display=swap" rel="stylesheet"/>
 <script id="tailwind-config">
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#17cf17",
-                        "background-light": "#f6f8f6",
-                        "background-dark": "#112111",
-                    },
-                    fontFamily: {
-                        "display": ["Space Grotesk", "sans-serif"]
-                    },
-                    borderRadius: {
-                        "DEFAULT": "0.25rem",
-                        "lg": "0.5rem",
-                        "xl": "0.75rem",
-                        "full": "9999px"
-                    },
-                },
-            },
-        }
-    </script>
+    tailwind.config = {
+      darkMode: "class",
+      theme: {
+        extend: {
+          colors: {
+            "primary": "#17cf17",
+            "background-light": "#f6f8f6",
+            "background-dark": "#112111",
+          },
+          fontFamily: {
+            "display": ["Space Grotesk", "sans-serif"]
+          },
+          borderRadius: { "DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px" },
+        },
+      },
+    }
+  </script>
 <style>
-        body {
-            --checkbox-tick-svg: url('data:image/svg+xml,%3csvg viewBox=%270 0 16 16%27 fill=%27rgb(17,33,17)%27 xmlns=%27http://www.w3.org/2000/svg%27%3e%3cpath d=%27M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z%27/%3e%3c/svg%3e');
-        }
-    </style>
+    .material-symbols-outlined {
+      font-variation-settings:
+      'FILL' 0,
+      'wght' 400,
+      'GRAD' 0,
+      'opsz' 24
+    }
+  </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display">
-<div class="relative flex min-h-screen w-full flex-col group/design-root overflow-x-hidden">
-<div class="layout-container flex h-full grow flex-col">
-<div class="flex flex-1 justify-center items-center">
-<div class="layout-content-container flex flex-col w-full max-w-md">
-<div class="flex min-h-screen flex-col bg-cover bg-center bg-no-repeat items-center justify-center p-4" data-alt="A birds-eye view of a pristine green football pitch." style='background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.6) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuBXUxy0ZEwL8d4m2TkKGx106809vJP2FoRDOyoj3DiNWY6SSfnDW-IKJ8CEiZ6qBJ0wUxm0UjjUWbuF-xQlXnJ1Sy3M8IWRiu6DrLD9Spk03EN-_erqN8GSJLmuCLDfo2IrNq_TNeOmfi1kZxrDk7WW6QIEC4kokYP8YVgvlUj0kM0r2o_899nFx-obue5uB86gvcNeozcB0HxKTk4NgHxNU1i095LOk7C4RUIU2pL5Ohi13TV108zhw2Z0N-NUQSQv4ZImbw1gEkb2");'>
-<div class="flex flex-col gap-8 w-full max-w-sm bg-background-light/10 dark:bg-background-dark/10 backdrop-blur-sm p-8 rounded-xl border border-white/10">
-<div class="flex flex-col gap-2 text-center">
-<h1 class="text-white text-4xl font-bold leading-tight tracking-tight">FieldBook</h1>
-<h2 class="text-white/80 text-base font-normal leading-normal">Tekrar hoşgeldiniz! Lütfen bilgilerinizi girin.</h2>
+<div class="relative flex min-h-screen flex-col items-center justify-center overflow-hidden">
+<div class="absolute inset-0">
+<img alt="Bulanıklaştırılmış bir futbol sahası arka plan resmi." class="h-full w-full object-cover opacity-10 dark:opacity-5" src="https://lh3.googleusercontent.com/aida-public/AB6AXuDONoRbvrCQavn2gATLJj1bNNypnBGheVqirOUwIig3zFsg9Qp1T57lkxY93u3OMEXwCIrqx2l0WwRP8bMm_qyHKGujuz-tbvwislAKUTzsRKjo9cdEUKkPNatCoQ7PHpHPixf7fHJN5cMYZ0bObiLa2nv57pV9b0vQaK_hRLboFnxkSINp9nN2Dkqt5H8k8ggaT5PB1khvoMmdUPzIljpk0fPaJQx8tOY6OmmZJ1eZUZ1j_PHYOz2NFI4nzShlHyQPSU5IjhEJcz9Y"/>
 </div>
-<div class="flex flex-col gap-4">
-<label class="flex flex-col w-full">
-<p class="text-white/80 text-sm font-medium leading-normal pb-2">E-posta</p>
-<div class="flex w-full flex-1 items-stretch rounded-lg h-12">
-<div class="text-white/60 flex border border-white/20 bg-transparent items-center justify-center pl-3.5 rounded-l-lg border-r-0">
-<span class="material-symbols-outlined" style="font-size: 20px;">mail</span>
+<div class="relative z-10 mx-auto w-full max-w-md p-6 sm:p-8">
+<div class="text-center mb-8">
+<h1 class="text-4xl font-bold text-primary">FieldBookr</h1>
+<p class="text-lg text-gray-600 dark:text-gray-300">Takıma Katıl</p>
 </div>
-<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-white focus:outline-0 focus:ring-0 border border-white/20 bg-transparent focus:border-primary h-full placeholder:text-white/60 px-3.5 rounded-l-none border-l-0 text-base font-normal leading-normal" placeholder="E-postanızı girin" type="email"/>
+<div class="bg-background-light dark:bg-background-dark/80 backdrop-blur-sm rounded-xl p-8 shadow-2xl">
+<div class="mb-6">
+<p class="text-2xl font-bold text-[#0e1b0e] dark:text-white">Hesabınızı Oluşturun</p>
+<p class="text-base text-gray-500 dark:text-gray-400">Başlayalım.</p>
 </div>
+<form class="space-y-6" id="register-form">
+<div>
+<label class="flex flex-col">
+<p class="text-[#0e1b0e] dark:text-gray-200 text-sm font-medium pb-2">Tam Adınız</p>
+<input class="form-input flex w-full resize-none overflow-hidden rounded-lg text-[#0e1b0e] dark:text-white focus:outline-0 focus:ring-2 focus:ring-primary/50 border border-[#d0e7d0] dark:border-gray-700 bg-background-light dark:bg-gray-800 h-12 placeholder:text-gray-400 dark:placeholder-gray-500 p-3 text-base font-normal leading-normal" placeholder="Tam adınızı girin" type="text"/>
 </label>
-<label class="flex flex-col w-full">
-<p class="text-white/80 text-sm font-medium leading-normal pb-2">Şifre</p>
-<div class="flex w-full flex-1 items-stretch rounded-lg h-12 relative">
-    <div class="text-white/60 flex border border-white/20 bg-transparent items-center justify-center pl-3.5 rounded-l-lg border-r-0">
-        <span class="material-symbols-outlined" style="font-size: 20px;">lock</span>
-    </div>
-    <input id="login-password" class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-white focus:outline-0 focus:ring-0 border border-white/20 bg-transparent focus:border-primary h-full placeholder:text-white/60 px-3.5 rounded-l-none border-l-0 text-base font-normal leading-normal" placeholder="Şifrenizi girin" type="password"/>
-    <button id="pw-toggle" type="button" class="absolute inset-y-0 right-0 flex items-center pr-3 text-gray-400 hover:text-primary" aria-label="Şifre göster/gizle">
-        <span class="material-symbols-outlined">visibility</span>
-    </button>
 </div>
+<div>
+<label class="flex flex-col">
+<p class="text-[#0e1b0e] dark:text-gray-200 text-sm font-medium pb-2">E-posta Adresi</p>
+<input class="form-input flex w-full resize-none overflow-hidden rounded-lg text-[#0e1b0e] dark:text-white focus:outline-0 focus:ring-2 focus:ring-primary/50 border border-[#d0e7d0] dark:border-gray-700 bg-background-light dark:bg-gray-800 h-12 placeholder:text-gray-400 dark:placeholder-gray-500 p-3 text-base font-normal leading-normal" placeholder="E-posta adresinizi girin" type="email"/>
 </label>
-<div class="flex items-center justify-between">
-<div class="flex items-center gap-2">
-<input class="h-4 w-4 rounded border-white/30 bg-transparent text-primary checked:bg-primary checked:border-primary checked:bg-[image:--checkbox-tick-svg] focus:ring-0 focus:ring-offset-0 focus:border-white/30 focus:outline-none" id="remember-me" type="checkbox"/>
-<label class="text-white/80 text-sm font-normal leading-normal" for="remember-me">Beni Hatırla</label>
 </div>
-<button class="text-white/80 text-sm font-medium leading-normal hover:text-white">Şifremi Unuttum?</button>
+<div>
+<label class="flex flex-col">
+<p class="text-[#0e1b0e] dark:text-gray-200 text-sm font-medium pb-2">Telefon Numarası</p>
+<input class="form-input flex w-full resize-none overflow-hidden rounded-lg text-[#0e1b0e] dark:text-white focus:outline-0 focus:ring-2 focus:ring-primary/50 border border-[#d0e7d0] dark:border-gray-700 bg-background-light dark:bg-gray-800 h-12 placeholder:text-gray-400 dark:placeholder-gray-500 p-3 text-base font-normal leading-normal" placeholder="Telefon numaranızı girin" type="tel"/>
+</label>
 </div>
-<button id="login-btn" class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 px-5 flex-1 bg-primary text-background-dark text-base font-bold leading-normal tracking-wide hover:bg-primary/90 transition-colors">
-    <span class="truncate">Giriş Yap</span>
+<div>
+<label class="flex flex-col">
+<p class="text-[#0e1b0e] dark:text-gray-200 text-sm font-medium pb-2">Şifre</p>
+<div class="relative flex w-full items-center">
+<input class="form-input flex w-full resize-none overflow-hidden rounded-lg text-[#0e1b0e] dark:text-white focus:outline-0 focus:ring-2 focus:ring-primary/50 border border-[#d0e7d0] dark:border-gray-700 bg-background-light dark:bg-gray-800 h-12 placeholder:text-gray-400 dark:placeholder-gray-500 p-3 pr-10 text-base font-normal leading-normal" placeholder="Şifrenizi girin" type="password"/>
+<button class="absolute inset-y-0 right-0 flex items-center pr-3 text-gray-400 hover:text-primary password-toggle-btn" type="button">
+<span class="material-symbols-outlined">visibility</span>
 </button>
 </div>
-<p>
-  Hesabınız yok mu? 
-  <a href="register.html" style="color: #00ff00; font-weight: bold;">Kayıt Ol</a>
+</label>
+</div>
+<div class="pt-4">
+<button class="w-full h-12 rounded-lg bg-primary text-white text-base font-bold transition-all hover:bg-primary/90 active:scale-95" type="submit">Hesap Oluştur</button>
+</div>
+</form>
 </p>
-<div class="flex items-center justify-center gap-4 text-xs text-white/50">
-<a class="hover:text-white" href="#">Hizmet Şartları</a>
-    <!-- Ortak stil dosyası -->
-    <link rel="stylesheet" href="../common.css">
-<a class="hover:text-white" href="#">Gizlilik Politikası</a>
-</div>
-        <!-- Ortak navbar (attempt fetch, fallback to inline to avoid file:// issues) -->
-        <div id="navbar-container"></div>
-        <script>
-            (async function(){
-                try {
-                    const res = await fetch('../navbar.html');
-                    if (!res.ok) throw new Error('fetch failed');
-                    const html = await res.text();
-                    document.getElementById('navbar-container').innerHTML = html;
-                } catch (e) {
-                    // graceful inline fallback navbar for local preview
-                    document.getElementById('navbar-container').innerHTML = `\n<nav class="w-full flex items-center justify-between py-2">\n  <div class="flex items-center gap-2 text-white">\n    <span class=\"material-symbols-outlined text-primary\">sports_soccer</span>\n    <strong>FieldBook</strong>\n  </div>\n  <div class=\"flex gap-4\">\n    <a href=\"../index.html\" class=\"text-white/80 hover:text-white\">Ana Sayfa</a>\n    <a href=\"../my_bookings_screen/code.html\" class=\"text-white/80 hover:text-white\">Rezervasyonlarım</a>\n    <a href=\"../venue_listing_screen_1/code.html\" class=\"text-white/80 hover:text-white\">Sahalar</a>\n  </div>\n</nav>\n`;
-                }
-            })();
-        </script>
+<p>
+  Zaten bir hesabınız var mı?
+  <a href="login.html">Giriş yap</a>
+</p>
 </div>
 </div>
+<footer class="mt-8 text-center text-sm text-gray-400 dark:text-gray-500">
+<p>
+<a class="hover:underline" href="#">Hizmet Şartları</a>
+<span class="mx-2">•</span>
+<a class="hover:underline" href="#">Gizlilik Politikası</a>
+</p>
+</footer>
 </div>
 </div>
-</div>
-</div>
-
 <script>
-    // Password toggle
-    (function(){
-        const pwToggle = document.getElementById('pw-toggle');
-        const pwInput = document.getElementById('login-password');
-        if (pwToggle && pwInput) {
-            pwToggle.addEventListener('click', function(){
-                if (pwInput.type === 'password') {
-                    pwInput.type = 'text';
-                    pwToggle.querySelector('.material-symbols-outlined').textContent = 'visibility_off';
-                } else {
-                    pwInput.type = 'password';
-                    pwToggle.querySelector('.material-symbols-outlined').textContent = 'visibility';
-                }
-            });
-        }
-
-        // Login button demo
-        const loginBtn = document.getElementById('login-btn');
-        if (loginBtn) {
-            loginBtn.addEventListener('click', function(e){
-                e.preventDefault();
-                // basic validation demo
-                const email = document.querySelector('input[type="email"]').value.trim();
-                const pw = pwInput ? pwInput.value.trim() : '';
-                if (!email || !pw) {
-                    alert('Lütfen e-posta ve şifrenizi girin.');
-                    return;
-                }
-                alert('Giriş başarılı.');
-            });
-        }
-    })();
+// Password visibility toggle
+const pwBtn = document.querySelector('.password-toggle-btn');
+if (pwBtn) {
+  pwBtn.addEventListener('click', function() {
+    const input = pwBtn.parentElement.querySelector('input');
+    if (input.type === 'password') {
+      input.type = 'text';
+      pwBtn.querySelector('span').textContent = 'visibility_off';
+    } else {
+      input.type = 'password';
+      pwBtn.querySelector('span').textContent = 'visibility';
+    }
+  });
+}
+// Registration form submit demo
+const regForm = document.getElementById('register-form');
+if (regForm) {
+  regForm.addEventListener('submit', function(e) {
+    e.preventDefault();
+    alert('Kayıt başarılı!');
+  });
+}
 </script>
-
-</body></html>
+</body>
+</html>
