Update navigation links in login.html

--- a/login.html
+++ b/login.html
@@ -149,9 +149,9 @@
                 <strong>FieldBook</strong>
               </div>
               <div class="flex gap-4">
-                <a href="../index.html" class="text-white/80 hover:text-white">Ana Sayfa</a>
-                <a href="../my_bookings_screen/code.html" class="text-white/80 hover:text-white">Rezervasyonlarım</a>
-                <a href="../venue_listing_screen_1/code.html" class="text-white/80 hover:text-white">Sahalar</a>
+                <a href="../anasayfa.html" class="text-white/80 hover:text-white">Ana Sayfa</a>
+                <a href="../booking.html" class="text-white/80 hover:text-white">Rezervasyonlarım</a>
+                <a href="../venue_listing_screen_1.html" class="text-white/80 hover:text-white">Sahalar</a>
               </div>
             </nav>`;
         }
